--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,14 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background: #1e293b;
+  color: lightgray;
 }
-
 * {
   box-sizing: border-box;
 }
